--- a/express-two/views/index.ejs
+++ b/express-two/views/index.ejs
@@ -8,8 +8,15 @@
     <title>Home</title>
 </head>
 <body>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <hr>
     <h1>Home Page</h1>
     <img src="static/images/men2.jpeg" alt="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus eligendi fugiat iusto hic quibusdam, quia quod asperiores officia odio ullam est nostrum adipisci sed expedita, debitis dolorum reprehenderit, dicta aspernatur.</p>
+    <p>
+        <%= name %>
+      
+    </p>
 </body>
 </html>
